--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -379,6 +379,18 @@
                 <h2 class="card-title">Relatifs 2 : Méthode auto</h2>
             </a>
 
+            <a href="nombres_relatifs_somme_differenceBClaire.html" class="choice-card" data-tags="relatifs automatique claire">
+                <div class="icon-wrapper">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <circle cx="5" cy="8" r="2.5" fill="#ef4444" stroke="none" />
+                        <circle cx="5" cy="16" r="2.5" fill="#22c55e" stroke="none" />
+                         <polygon points="17 2 17 10 23 10 15 22 15 14 9 14 17 2" />
+                    </svg>
+                </div>
+                <h2 class="card-title">Relatifs 2 : méthode ClaireL</h2>
+            </a>
+
+
             <a href="nombres_relatifs_somme_differenceC.html" class="choice-card" data-tags="relatifs opposé">
                 <div class="icon-wrapper">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
