--- a/outils/plateaux_manipulation/nombres_relatifs_somme_differenceBClaire.html.html
+++ b/outils/plateaux_manipulation/nombres_relatifs_somme_differenceBClaire.html.html
@@ -210,7 +210,7 @@
     <header class="bg-white shadow-md z-30 flex flex-col shrink-0">
         
         <!-- LIGNE 1 : CONTROLES + BOUTON ENLEVER -->
-        <div class="flex items-center justify-between p-2 gap-2 sm:gap-4 w-full border-b border-slate-100 min-h-[70px]">
+        <div class="flex items-center justify-between p-2 gap-2 sm:gap-4 w-full border-b border-slate-100 min-h-[92px]">
             
             <!-- GAUCHE : Boutons Actions -->
             <div class="flex items-center gap-2 sm:gap-3 flex-shrink-0">
@@ -235,18 +235,23 @@
                 </div>
             </div>
 
-            <!-- CENTRE : BOUTON ENLEVER TOUT (Remplace Opposé) -->
-            <div class="flex-1 flex justify-center items-center px-2 min-w-[40px]">
-                <button id="btn-remove-all" onclick="removeAll()" class="hidden bg-amber-500 hover:bg-amber-600 text-white px-4 py-1 rounded-full font-extrabold shadow-lg border-b-4 border-amber-700 active:border-b-0 active:translate-y-1 transition flex items-center gap-2 text-sm sm:text-base whitespace-nowrap">
+            <!-- CENTRE : AFFICHAGE EN CHIFFRES + BOUTON ENLEVER -->
+        <div class="flex-1 flex flex-col items-center justify-center px-2 gap-1 min-w-[40px]">
+            <div class="w-full flex items-center justify-center overflow-x-auto no-scrollbar whitespace-nowrap px-2">
+                <div id="equation-terms" class="flex items-center gap-1">
+                    <span class="text-3xl sm:text-4xl font-bold text-slate-400 tracking-tight transition-colors">0</span>
+                </div>
+            </div>
+            <button id="btn-remove-all" onclick="removeAll()" class="hidden bg-amber-500 hover:bg-amber-600 text-white px-4 py-1 rounded-full font-extrabold shadow-lg border-b-4 border-amber-700 active:border-b-0 active:translate-y-1 transition flex items-center gap-2 text-sm sm:text-base whitespace-nowrap">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
                     </svg>
                     <span class="hidden md:inline">ENLEVER TOUT</span>
                     <span class="md:hidden">ENLEVER</span>
                 </button>
-            </div>
+        </div>
 
-            <!-- DROITE : Outils -->
+<!-- DROITE : Outils -->
             <div class="flex items-center gap-1 bg-gray-100 p-1 rounded-lg border border-gray-300 shrink-0">
                 <button onclick="setTool('hand')" id="tool-hand" class="p-2 rounded bg-white shadow text-gray-700 hover:bg-gray-50 border border-gray-200" title="Main">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -266,15 +271,7 @@
             </div>
         </div>
 
-        <!-- LIGNE 2 : ZONE DE CALCUL (Prend toute la largeur) -->
-        <div class="h-16 w-full bg-white flex items-center justify-center relative shadow-inner z-10 border-b border-slate-200 overflow-hidden">
-             <div class="w-full h-full flex items-center justify-center overflow-x-auto no-scrollbar whitespace-nowrap px-4">
-                <div id="equation-terms" class="flex items-center gap-1">
-                    <span class="text-3xl sm:text-4xl font-bold text-slate-400 tracking-tight transition-colors">0</span>
-                </div>
-            </div>
-        </div>
-    </header>
+        </header>
 
     <div class="flex flex-1 overflow-hidden relative">
         <!-- Canvas pour dessiner -->
@@ -299,11 +296,12 @@
             </button>
 
 
-            <!-- Bouton RÉDUIRE (même fonction, déplacé) -->
-            <button onclick="reduceEquation()" class="w-full px-1 py-2 text-slate-600 text-[10px] sm:text-xs font-bold hover:bg-slate-200 flex flex-col items-center gap-1 rounded transition border border-slate-200 bg-white shadow-sm" title="Réduire / simplifier l'expression">
+            <!-- Bouton RÉDUIRE -->
+            <button onclick="reduceEquation()" class="w-full px-1 py-2 text-slate-600 text-[10px] sm:text-xs font-bold hover:bg-slate-200 flex flex-col items-center gap-1 rounded transition border border-slate-200 bg-white shadow-sm" title="Simplifier l'écriture">
                 RÉDUIRE
             </button>
 
+            <!-- Bouton AUTO 0 -->
             <button id="btn-auto-simplify" onclick="animateSimplification()" class="w-14 h-14 rounded-full bg-indigo-100 text-indigo-700 border-2 border-indigo-200 flex flex-col items-center justify-center shadow-sm hover:bg-indigo-200 active:scale-95 transition" title="Raccourci: Entrée">
                 <span class="text-xs font-bold">AUTO</span>
                 <span class="text-lg font-bold">0</span>
