--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -387,7 +387,7 @@
                          <polygon points="17 2 17 10 23 10 15 22 15 14 9 14 17 2" />
                     </svg>
                 </div>
-                <h2 class="card-title">Relatifs 2 : méthode ClaireL</h2>
+                <h2 class="card-title">Relatifs 2 : méthode Claire</h2>
             </a>
 
 
