--- a/outils/plateaux_manipulation/bandes_fractions.html
+++ b/outils/plateaux_manipulation/bandes_fractions.html
@@ -13,7 +13,7 @@
       --stripH: 58;
       --boardBg: #ffffff;
       /* Couleur de la grille (bordures) */
-      --gridColor: rgba(0,0,0,0.6); 
+      --gridColor: #000000; 
     }
 
     body{
