--- a/outils/plateaux_manipulation/stats_city.html
+++ b/outils/plateaux_manipulation/stats_city.html
@@ -260,6 +260,88 @@
         .range-tip-left { border-right: 15px solid #a855f7; margin-right: -2px; }
         .range-tip-right { border-left: 15px solid #a855f7; margin-left: -2px; }
 
+        /* --- TOISE VERTICALE (ÉTENDUE) --- */
+        #range-arrow.range-toise {
+            position: absolute;
+            left: 0; top: 0;
+            width: 160px; height: 0;
+            pointer-events: none;
+            display: none;
+            z-index: 45;
+            opacity: 0;
+            transform: translateY(6px) scale(0.985);
+            transition: opacity 0.25s ease, transform 0.25s ease;
+        }
+        #range-arrow.range-toise.show {
+            opacity: 1;
+            transform: translateY(0) scale(1);
+        }
+        #range-arrow.range-toise .range-measure {
+            position: absolute;
+            left: 0; top: 0; bottom: 0;
+            width: 34px;
+            display: block;
+            pointer-events: none;
+        }
+        #range-arrow.range-toise .range-stem {
+            position: absolute;
+            left: 14px; /* (34 - 6) / 2 */
+            top: 18px;
+            bottom: 18px;
+            width: 6px;
+            background: #a855f7;
+            border-radius: 3px;
+            box-shadow: 0 0 14px rgba(168, 85, 247, 0.9);
+        }
+        #range-arrow.range-toise .range-head {
+            position: absolute;
+            width: 0; height: 0;
+            filter: drop-shadow(0 0 10px rgba(168, 85, 247, 0.9));
+            opacity: 0.98;
+        }
+        #range-arrow.range-toise .range-head-top {
+            left: 7px;  /* (34 - 20) / 2 */
+            top: 2px;   /* pointe alignée sur le centre du petit bâton (tick) */
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            border-bottom: 14px solid #a855f7;
+        }
+        #range-arrow.range-toise .range-head-bottom {
+            left: 7px;   /* (34 - 20) / 2 */
+            bottom: 2px; /* pointe alignée sur le centre du petit bâton (tick) */
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            border-top: 14px solid #a855f7;
+        }
+        #range-arrow.range-toise .range-tick {
+            position: absolute;
+            left: -6px;
+            width: 42px;
+            height: 4px;
+            background: rgba(168, 85, 247, 0.95);
+            border-radius: 4px;
+            box-shadow: 0 0 12px rgba(168, 85, 247, 0.75);
+        }
+        #range-arrow.range-toise .range-tick-top { top: 0; }
+        #range-arrow.range-toise .range-tick-bottom { bottom: 0; }
+
+        #range-arrow.range-toise .range-label {
+            position: absolute;
+            left: 44px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: rgba(15, 23, 42, 0.92);
+            border: 2px solid #a855f7;
+            border-radius: 14px;
+            padding: 8px 12px;
+            font-weight: 900;
+            font-size: 1.25rem;
+            color: #e9d5ff;
+            white-space: nowrap;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.45);
+            text-shadow: 0 2px 8px rgba(0,0,0,0.5);
+        }
+
         .ground {
             position: absolute; bottom: 0; width: 100%; height: 24px;
             background: #1e293b; border-top: 4px solid #334155; z-index: 10;
@@ -445,7 +527,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M9 5l7 7-7 7" /></svg>
                 </div>
             </div>
-            <div id="range-arrow"><div class="range-tip range-tip-left"></div><div class="range-line"></div><div class="range-tip range-tip-right"></div></div>
+            <div id="range-arrow" class="range-toise" aria-hidden="true"><div class="range-measure"><div class="range-tick range-tick-top"></div><div class="range-head range-head-top"></div><div class="range-stem"></div><div class="range-head range-head-bottom"></div><div class="range-tick range-tick-bottom"></div></div><div class="range-label">Étendue</div></div>
             <div id="floating-result"><h2 id="res-title"></h2><p id="res-sub"></p></div>
             <div id="brick-supply" onmousedown="startDragSupply(event)" ontouchstart="startDragSupply(event)">
                 <div class="brick" style="width: 40px; height: 12px; border-top: 2px solid #60a5fa; border-radius: 2px; margin-bottom:2px;"></div>
@@ -515,6 +597,8 @@
             isMeanFound: false,
             isRangeFound: false,
             rangeSelection: [],
+            rangeFoundPair: null,
+            rangeFoundValue: null,
             currentTool: 'hand',
             constructLevel: 1,
             targetMedian: 0,
@@ -602,7 +686,10 @@
             state.isRangeFound = false;
             state.isSorted = false;
             state.rangeSelection = [];
-            document.getElementById('range-arrow').style.display = 'none';
+            state.rangeFoundPair = null;
+            state.rangeFoundValue = null;
+            rangeArrow.style.display = 'none';
+            rangeArrow.classList.remove('show');
         }
 
         function updateUIForMode() {
@@ -729,7 +816,7 @@
             medianTool.classList.remove('solved', 'ghost-building', 'no-windows'); 
             document.getElementById('tool-handle').style.display = 'flex';
             toolLabel.style.opacity = '1'; toolLabel.innerText = "?"; toolLabel.style.top = ''; toolLabel.style.transform = ''; 
-            groupLeft.style.opacity = '0'; groupRight.style.opacity = '0'; floatRes.style.opacity = '0'; rangeArrow.style.display = 'none';
+            groupLeft.style.opacity = '0'; groupRight.style.opacity = '0'; floatRes.style.opacity = '0'; rangeArrow.style.display = 'none'; rangeArrow.classList.remove('show');
             
             const useMeanStyle = (state.mainMode === 'CALCUL' && state.subMode === 'MEAN') || 
                                  (state.mainMode === 'BUILD' && (state.subMode === 'EDIT' || state.subMode === 'MEAN'));
@@ -852,7 +939,8 @@
                 if (splitIndex !== -1 && i >= splitIndex) x += extraGap;
                 if(b.element) { b.element.style.left = x + 'px'; b.element.style.transform = ''; }
             });
-        }
+            updateRangeMeasurePosition();
+}
 
         function showMessage(title, sub = "", color = "text-slate-300") {
             const h = document.getElementById('msg-title'); h.innerText = title; h.className = "text-lg sm:text-2xl font-bold drop-shadow-md " + color;
@@ -1033,11 +1121,74 @@
             if ( (v1 === min && v2 === max) || (v1 === max && v2 === min) ) {
                 state.isRangeFound = true; playSound('ding'); const range = max - min;
                 showFloatingResult(`Étendue = ${range} étages`, "", "text-violet-400");
+                const minB = (b1.value <= b2.value) ? b1 : b2;
+                const maxB = (b1.value <= b2.value) ? b2 : b1;
+                showRangeMeasure(minB, maxB, range);
                 [b1, b2].forEach(b => { b.buildingEl.classList.remove('selected-range'); b.buildingEl.classList.add('highlight-range'); });
                 state.buildings.forEach(b => { if(b.id !== b1.id && b.id !== b2.id) b.buildingEl.classList.add('dimmed'); });
             } else {
                 setTimeout(() => { state.rangeSelection = []; [b1, b2].forEach(b => b.buildingEl.classList.remove('highlight-range')); showMessage("Raté ! Cherchez le plus petit et le plus grand."); }, 500);
             }
+        }
+
+
+        function clearRangeMeasure() {
+            state.rangeFoundPair = null;
+            state.rangeFoundValue = null;
+            rangeArrow.style.display = 'none';
+            rangeArrow.classList.remove('show');
+        }
+
+        function showRangeMeasure(minB, maxB, rangeVal) {
+            state.rangeFoundPair = { minId: minB.id, maxId: maxB.id };
+            state.rangeFoundValue = rangeVal;
+
+            const label = rangeArrow.querySelector('.range-label');
+            const minV = minB.value;
+            const maxV = maxB.value;
+            const minus = "−";
+            if (label) label.innerText = `Étendue : ${maxV} ${minus} ${minV} = ${rangeVal}`;
+
+            rangeArrow.style.display = 'block';
+            updateRangeMeasurePosition();
+            requestAnimationFrame(() => rangeArrow.classList.add('show'));
+        }
+
+        function updateRangeMeasurePosition() {
+            if (state.subMode !== 'RANGE') return;
+            if (!state.isRangeFound || !state.rangeFoundPair) return;
+
+            const minB = state.buildings.find(b => b.id === state.rangeFoundPair.minId);
+            const maxB = state.buildings.find(b => b.id === state.rangeFoundPair.maxId);
+            if (!minB || !maxB || !minB.buildingEl || !maxB.buildingEl) return;
+
+            const containerRect = container.getBoundingClientRect();
+            const minRect = minB.buildingEl.getBoundingClientRect();
+            const maxRect = maxB.buildingEl.getBoundingClientRect();
+
+            // Alignement au pixel près :
+            // - le centre du petit bâton (tick) = sommet de l'immeuble max
+            // - le centre du petit bâton (tick) = sommet de l'immeuble min
+            const tickHalf = 2; // tick = 4px de haut
+            const labelEl = rangeArrow.querySelector('.range-label');
+            let arrowWidth = 160;
+            if (labelEl) {
+                arrowWidth = Math.max(160, 44 + labelEl.offsetWidth + 10);
+            }
+            let topY = (maxRect.top - containerRect.top) - tickHalf;
+            let bottomY = (minRect.top - containerRect.top) + tickHalf;
+            let height = bottomY - topY;
+
+            let x = (maxRect.right - containerRect.left) + 14;
+            if (x + arrowWidth > containerRect.width - 10) {
+                x = (maxRect.left - containerRect.left) - arrowWidth - 14;
+            }
+            x = Math.max(10, Math.min(x, containerRect.width - arrowWidth - 10));
+
+            rangeArrow.style.left = `${x}px`;
+            rangeArrow.style.top = `${topY}px`;
+            rangeArrow.style.height = `${height}px`;
+            rangeArrow.style.width = `${arrowWidth}px`;
         }
 
         function setConstructLevel(lvl) {
@@ -1133,7 +1284,7 @@
                     // --- CORRECTION : RESET DE L'ÉTAT DU MODE ÉTENDUE ---
                     state.rangeSelection = [];
                     state.buildings.forEach(build => build.buildingEl.classList.remove('highlight-range'));
-                    document.getElementById('range-arrow').style.display = 'none';
+                    clearRangeMeasure();
                     // ----------------------------------------------------
 
                     medianTool.style.display='none'; 
@@ -1167,7 +1318,7 @@
         function autoSort() {
             state.isSorted = true; state.buildings.sort((a,b)=>a.value-b.value); repositionBuildings(); playSound('slide');
             if(state.subMode === 'MEDIAN') checkSorted();
-            if(state.subMode === 'RANGE') { state.rangeSelection = []; state.buildings.forEach(b=>b.buildingEl.classList.remove('highlight-range', 'dimmed')); document.getElementById('range-arrow').style.display = 'none'; floatRes.style.opacity = '0'; }
+            if(state.subMode === 'RANGE') { state.rangeSelection = []; state.buildings.forEach(b=>b.buildingEl.classList.remove('highlight-range', 'dimmed')); clearRangeMeasure(); floatRes.style.opacity = '0'; }
         }
         function trySelectMedian(id) {
             if(state.subMode !== 'MEDIAN') return;
